--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,5 @@
       <title>Data Table</title>
    </head>
 
-   <body>
-      <script src="index.js"></script>
-   </body>
+   <body></body>
 </html>
