--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
       <meta charset="utf-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
       <meta name="description" content="Simple table to view and edit data" />
+      <link rel="icon" href="favicon.ico" type="image/x-icon" />
       <title>Data Table</title>
    </head>
 
